// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Endpoint > #handleResult > Should handle errors within ResultHandler 1`] = `
[
  [
    "Result handler failure",
    ResultHandlerError({
      "cause": AssertionError({
        "message": "Something unexpected happened",
      }),
      "message": "Something unexpected happened",
    }),
  ],
]
`;

exports[`Endpoint > #parseOutput > Should throw on output validation failure 1`] = `
{
  "message": "output.email: Invalid email address",
}
`;

exports[`Endpoint > .getResponses() > should return the negative responses (readonly) 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "examples": [
        {
          "message": "Sample error message",
        },
      ],
      "properties": {
        "message": {
          "type": "string",
        },
      },
      "required": [
        "message",
      ],
      "type": "object",
    },
    "statusCodes": [
      400,
    ],
  },
]
`;

exports[`Endpoint > .getResponses() > should return the positive responses (readonly) 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "something": {
          "type": "number",
        },
      },
      "required": [
        "something",
      ],
      "type": "object",
    },
    "statusCodes": [
      200,
    ],
  },
]
`;

exports[`Endpoint > Issue #585: Handling non-Error exceptions > thrown in #handleResult() 1`] = `
[
  [
    "Result handler failure",
    ResultHandlerError({
      "cause": Error({
        "message": "Something unexpected happened",
      }),
      "message": "Something unexpected happened",
    }),
  ],
]
`;
